Added JS file and finished the HTML
- Added JS file with a placeholder function
- Added comments of HTML and CSS file
- Finished the HTML button so when pressed it will run the JS placeholder function

--- a/files/pages/style.css
+++ b/files/pages/style.css
@@ -1,7 +1,9 @@
+/* This is ONLY for the background color */
 body{
     background-color: #121212;
 }
 
+/* This is the style for the text and button */
 h1{
     text-align: center;
     color: gainsboro;
